<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Single-page X11 settings: all sections inline (no nested PreferenceScreen nav) -->
    <PreferenceScreen app:key="main" app:title="@string/lorie_pref_main">

        <PreferenceCategory app:key="cat_output" app:title="@string/lorie_pref_output" app:iconSpaceReserved="false">
            <ListPreference app:key="displayResolutionMode" app:defaultValue="scaled" app:entries="@array/displayResolutionVariants" app:entryValues="@array/displayResolutionVariants" />
            <SeekBarPreference app:key="displayScale" app:defaultValue="120" app:min="30" android:max="300" app:seekBarIncrement="10" app:showSeekBarValue="true" app:updatesContinuously="true" />
            <ListPreference app:key="displayResolutionExact" app:defaultValue="1280x1024" app:entries="@array/displayResolution" app:entryValues="@array/displayResolution" tools:ignore="DuplicateSpeakableTextCheck" />
            <EditTextPreference app:key="displayResolutionCustom" app:defaultValue="1280x1024" app:useSimpleSummaryProvider="true" />
            <ListPreference app:key="displayFilteringMode" app:defaultValue="nearest" app:entries="@array/displayFilteringVariants" app:entryValues="@array/displayFilteringVariants" />
            <com.termux.x11.NcSwitchPreference app:key="adjustResolution" app:defaultValue="false" />
            <com.termux.x11.NcSwitchPreference app:key="displayStretch" app:defaultValue="false" />
            <com.termux.x11.NcSwitchPreference app:key="Reseed" app:defaultValue="true" />
            <com.termux.x11.NcSwitchPreference app:key="PIP" app:defaultValue="false" />
            <com.termux.x11.NcSwitchPreference app:key="fullscreen" app:defaultValue="false" />
            <ListPreference app:key="forceOrientation" app:defaultValue="auto" app:entries="@array/forceOrientationVariants" app:entryValues="@array/forceOrientationVariants" />
            <com.termux.x11.NcSwitchPreference app:key="hideCutout" app:defaultValue="false" />
            <com.termux.x11.NcSwitchPreference app:defaultValue="true" app:key="keepScreenOn" />
        </PreferenceCategory>

        <PreferenceCategory app:key="cat_pointer" app:title="@string/lorie_pref_pointer" app:iconSpaceReserved="false">
            <ListPreference app:key="touchMode" app:defaultValue="1" app:entries="@array/touchscreenInputModesEntries" app:entryValues="@array/touchscreenInputModesValues" />
            <com.termux.x11.NcSwitchPreference app:key="scaleTouchpad" app:defaultValue="true" />
            <com.termux.x11.NcSwitchPreference app:key="showStylusClickOverride" app:defaultValue="false" />
            <com.termux.x11.NcSwitchPreference app:key="stylusIsMouse" app:defaultValue="false" />
            <com.termux.x11.NcSwitchPreference app:key="stylusButtonContactModifierMode" app:defaultValue="false" />
            <com.termux.x11.NcSwitchPreference app:key="showMouseHelper" app:defaultValue="false" />
            <com.termux.x11.NcSwitchPreference app:key="pointerCapture" app:defaultValue="false" />
            <ListPreference app:key="transformCapturedPointer" app:defaultValue="no" app:entries="@array/transformCapturedPointerEntries" app:entryValues="@array/transformCapturedPointerValues" />
            <SeekBarPreference app:key="capturedPointerSpeedFactor" app:defaultValue="100" app:min="1" android:max="300" app:seekBarIncrement="1" app:showSeekBarValue="true" app:updatesContinuously="true" />
            <com.termux.x11.NcSwitchPreference app:key="tapToMove" app:defaultValue="false" />
            <com.termux.x11.NcSwitchPreference app:key="ignoreGamepadEvents" app:defaultValue="false" />
        </PreferenceCategory>

        <PreferenceCategory app:key="cat_kbd" app:title="@string/lorie_pref_kbd" app:iconSpaceReserved="false">
            <com.termux.x11.NcSwitchPreference app:key="showAdditionalKbd" app:defaultValue="false" />
            <!-- kept in DataStore; not shown in UI -->
            <com.termux.x11.NcSwitchPreference app:key="additionalKbdVisible" app:defaultValue="false" app:isPreferenceVisible="false" />
            <com.termux.x11.NcSwitchPreference app:key="showIMEWhileExternalConnected" app:defaultValue="true" />
            <com.termux.x11.NcSwitchPreference app:key="preferScancodes" app:defaultValue="false" />
            <com.termux.x11.NcSwitchPreference app:key="hardwareKbdScancodesWorkaround" app:defaultValue="true" />
            <com.termux.x11.NcSwitchPreference app:key="dexMetaKeyCapture" app:defaultValue="false" />
            <com.termux.x11.NcSwitchPreference app:key="enforceCharBasedInput" app:defaultValue="false" />
        </PreferenceCategory>

        <PreferenceCategory app:key="cat_ekbar" app:title="@string/lorie_pref_ekbar" app:iconSpaceReserved="false">
            <com.termux.x11.NcSwitchPreference app:key="adjustHeightForEK" app:defaultValue="true" />
            <com.termux.x11.NcSwitchPreference app:key="useTermuxEKBarBehaviour" app:defaultValue="false" />
            <SeekBarPreference app:key="opacityEKBar" app:defaultValue="100" app:min="1" android:max="100" app:seekBarIncrement="1" app:showSeekBarValue="true" app:updatesContinuously="true" />
            <EditTextPreference app:key="extra_keys_config" />
        </PreferenceCategory>

        <PreferenceCategory app:key="cat_userActions" app:title="@string/lorie_pref_userActions" app:iconSpaceReserved="false">
            <ListPreference app:key="swipeUpAction" app:defaultValue="no action" app:entries="@array/userActionsValues" app:entryValues="@array/userActionsValues" />
            <ListPreference app:key="swipeDownAction" app:defaultValue="toggle additional key bar" app:entries="@array/userActionsValues" app:entryValues="@array/userActionsValues" />
            <ListPreference app:key="volumeUpAction" app:defaultValue="no action" app:entries="@array/userActionsVolumeUpValues" app:entryValues="@array/userActionsVolumeUpValues" />
            <ListPreference app:key="volumeDownAction" app:defaultValue="no action" app:entries="@array/userActionsVolumeDownValues" app:entryValues="@array/userActionsVolumeDownValues" />
            <ListPreference app:key="backButtonAction" app:defaultValue="return to app" app:entries="@array/userActionsValues" app:entryValues="@array/userActionsValues" />
            <ListPreference app:key="notificationTapAction" app:defaultValue="open preferences" app:entries="@array/userActionsValues" app:entryValues="@array/userActionsValues" />
            <ListPreference app:key="notificationButton0Action" app:defaultValue="open preferences" app:entries="@array/userActionsValues" app:entryValues="@array/userActionsValues" />
            <ListPreference app:key="notificationButton1Action" app:defaultValue="exit" app:entries="@array/userActionsValues" app:entryValues="@array/userActionsValues" />
            <ListPreference app:key="mediaKeysAction" app:defaultValue="no action" app:entries="@array/userActionsMediaKeyValues" app:entryValues="@array/userActionsMediaKeyValues" />
        </PreferenceCategory>

        <PreferenceCategory app:key="cat_other" app:title="@string/lorie_pref_other" app:iconSpaceReserved="false">
            <com.termux.x11.NcSwitchPreference app:key="clipboardEnable" app:defaultValue="true" />
            <Preference app:key="requestNotificationPermission" />
            <com.termux.x11.NcSwitchPreference app:key="storeSecondaryDisplayPreferencesSeparately" app:defaultValue="false" />
        </PreferenceCategory>
    </PreferenceScreen>
</PreferenceScreen>
